--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ about_section:
 </section>
 <section class="d-none d-lg-block px-5 px-lg-3 py-5 bg-success">
     <div class="d-flex flex-row justify-content-evenly">
-        <div class="d-flex col-4 col-xl-3 justify-content-lg-start justify-content-xl-end">
-            <h2 class="d-none d-xl-block text-white display-3 text-white text-uppercase col-11 mb-0 pt-lg-3 pt-xl-0">
+        <div class="d-flex col-4 col-xl-4 justify-content-lg-start justify-content-xl-end">
+            <h2 class="d-none d-xl-block text-white display-3 text-white text-uppercase col-11 col-xl-8 mb-0 pt-lg-3 pt-xl-0">
                 contact us now for a consultation </h2>
             <h2 class="d-none d-lg-block d-xl-none text-white display-4 text-white text-uppercase col-12 mb-0 pt-lg-3 pt-xl-0">
                 contact us now for a consultation </h2>
@@ -91,8 +91,8 @@ about_section:
             </div>
         </div>
         <div class=" d-flex justify-content-center py-4 bg-success">
-            <div class="d-flex px-4 justify-content-md-center">
-                <h2 class="text-white display-3 text-white text-uppercase col-8 col-md-10">
+            <div class="d-flex px-5 justify-content-md-center">
+                <h2 class="text-white display-3 text-white text-uppercase col-8 col-md-10 px-1 px-sm-0">
                 contact us now for a consultation
                 </h2>
             </div>
@@ -175,95 +175,42 @@ about_section:
 
 <!--MOBILE INFO NAV HERE-->
 
-<!--<section class="d-flex d-lg-none justify-content-center align-items-center py-5">-->
-<!--    <div class="d-flex flex-column">-->
-<!--        <div class="d-flex dropdown justify-content-center">-->
-<!--            <button class="btn btn-link dropdown-toggle fs-1 link-underline link-underline-opacity-0 text-uppercase f-weight-500 text-success" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                Select a service-->
-<!--            </button>-->
-<!--            <div class="dropdown-menu border-0 py-0" aria-labelledby="dropdownMenuButton">-->
-<!--                <div class="accordion" id="accordionExample">-->
-<!--                    {% for item in page.service_section.services %}-->
-<!--                        <div class="accordion-item">-->
-<!--                            <h2 class="accordion-header" id="heading{{ forloop.index }}">-->
-<!--                                <button class="accordion-button collapsed" role="button" data-bs-toggle="collapse" data-bs-parent="accordionExample" data-bs-target="#collapseExample{{ forloop.index }}" aria-expanded="false" aria-controls="collapseExample{{ forloop.index }}">-->
-<!--                                    <h3 class="text-uppercase fs-2">{{ item.text }}</h3>-->
-<!--                                </button>-->
-<!--                            </h2>-->
-<!--                        </div>-->
-<!--                    {% endfor %}-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="d-flex justify-content-center">-->
-<!--            <div class="d-flex col-10 py-3">-->
-<!--                {% for item in page.service_section.services %}-->
-<!--                <div id="collapseExample{{ forloop.index }}" class="accordion-collapse collapse " aria-labelledby="heading{{ forloop.index }}" data-bs-parent="dropdownMenuButton">-->
-<!--                    <div class="d-flex accordion-header fs-2">{{ item.text }} </div>-->
-<!--                    <div class="d-flex accordion-body fs-4" style="text-align: justify">-->
-<!--                        {{ item.description }}-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                {% endfor %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-<!--<section class="d-flex d-lg-none justify-content-center align-items-center py-5">-->
-<!--    <div class="d-flex flex-column">-->
-<!--        <div class="d-flex dropdown justify-content-center">-->
-<!--            <button class="btn btn-link dropdown-toggle fs-1 link-underline link-underline-opacity-0 text-uppercase f-weight-500 text-success" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                Select a service-->
-<!--            </button>-->
-<!--            <div class="dropdown-menu border-0 py-0" aria-labelledby="dropdownMenuButton">-->
-<!--                <div class="accordion" id="accordionExample">-->
-<!--                    {% for item in page.service_section.services %}-->
-<!--                        <div class="accordion-item">-->
-<!--                            <h2 class="accordion-header" id="heading{{ forloop.index }}">-->
-<!--                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample{{ forloop.index }}" aria-expanded="false" aria-controls="collapseExample{{ forloop.index }}">-->
-<!--                                    <h3 class="text-uppercase fs-2">{{ item.text }}</h3>-->
-<!--                                </button>-->
-<!--                            </h2>-->
-<!--                            <div id="collapseExample{{ forloop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.index }}" data-bs-parent="#accordionExample">-->
-<!--                                <div class="accordion-body fs-4" style="text-align: justify;">-->
-<!--                                    {{ item.description }}-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    {% endfor %}-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
-<section class="d-flex d-lg-none justify-content-center align-items-center py-5">
-    <div class="d-flex flex-column">
-        <div class="d-flex dropdown-center justify-content-center">
-            <button class="btn btn-link dropdown-toggle link-underline-info text-uppercase f-weight-500 text-success font-size-2-rem" type="button" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                Select a service
-            </button>
-            <div class="dropdown-menu border-0 py-0" aria-labelledby="dropdownMenuButton">
-                <div class="accordion accordion-index-info" id="accordionExample">
-                    {% for item in page.service_section.services %}
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="heading{{ forloop.index }}">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample{{ forloop.index }}" aria-expanded="false" aria-controls="collapseExample{{ forloop.index }}">
-                                    <h3 class="text-uppercase font-size-2-rem">{{ item.text }}</h3>
-                                </button>
-                            </h2>
-                        </div>
-                    {% endfor %}
+<section class="d-flex d-lg-none justify-content-center align-items-center pt-4 pb-1">
+    <div class="d-flex flex-column col-10 col-md-10">
+        <!-- Bootstrap Navbar -->
+        <nav class="navbar navbar-light bg-light col-12 justify-content-md-start bg-transparent border-bottom border-top">
+            <div class="d-flex col-md-7 mx- mx-md-0 px-0 pb-2">
+                <button class="navbar-toggler d-flex px-0 py-0 border-0 flex-grow-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation" style="color: transparent;">
+                    <span class="d-flex text-uppercase text-success display-4  col-md-12 col-12 justify-content-md-evenly justify-content-evenly f-weight-500 pe-md-3" id="service-title">Select a service</span>
+                    <span class="d-flex col-md-7 justify-content-end align-self-center col-2 "><i class="d-flex justify-content-end fa-solid fa-caret-down fa-2xl text-success"></i></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="d-flex justify-content-center col-md-12 col-12 pe-2">
+                    <ul class="navbar-nav col-12 col-md-11 px-3 px-md-2">
+                        {% for item in page.service_section.services %}
+                        <li class="{% if forloop.index == 1 %} nav-item pt-5 {% else %} nav-item {% endif %}">
+                            <a class="nav-link" href="#collapseExample{{ forloop.index }}" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapseExample{{ forloop.index }}">
+                                <h3 class="text-uppercase f-weight-500 display-5 text-info">{{ item.text }}</h3>
+                            </a>
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <div class="d-flex col-10 py-3">
+        </nav>
+
+        <!-- Info Section -->
+        <div class="d-flex justify-content-center mt-3 " id="infoContainer">
+            <div class="d-flex col-12 col-md-11 px-1 px-3 px-md-2 pt-0">
                 {% for item in page.service_section.services %}
-                <div id="collapseExample{{ forloop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.index }}">
-                    <h3 class="d-flex font-size-2-rem f-weight-500 pb-4 text-uppercase">{{ item.text }} </h3>
-                    <div class="d-flex accordion-body font-size-2-rem  f-weight-500" style="text-align: justify">
+                <div id="collapseExample{{ forloop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.index }}" data-bs-parent="#infoContainer">
+                    <h3 class="d-flex display-5 f-weight-500 pb-4 text-uppercase">{{ item.text }}</h3>
+                    <div class="d-flex accordion-body font-size-2-rem f-weight-500" style="text-align: justify">
                         {{ item.description }}
+                    </div>
+                    <div class="d-flex py-4">
+                        <a href="{{ item.url }}" class="btn btn-primary btn-lg f-weight-500 rounded-0 learn-more-btn px-5 fs-2 py-3" role="button">LEARN MORE</a>
                     </div>
                 </div>
                 {% endfor %}
@@ -273,36 +220,45 @@ about_section:
 </section>
 
 <script>
-document.addEventListener('DOMContentLoaded', function () {
-    const accordionItems = document.querySelectorAll('.accordion-button');
-    const dropdownButton = document.getElementById('dropdownMenuButton');
-
-    accordionItems.forEach(item => {
-        item.addEventListener('click', function () {
-            const targetId = this.getAttribute('data-bs-target');
-            const targetCollapse = document.querySelector(targetId);
-            const serviceTitle = this.querySelector('h3').innerHTML;
-
-            // Close all other open accordion items
-            document.querySelectorAll('.accordion-collapse').forEach(collapse => {
-                if (collapse !== targetCollapse) {
-                    collapse.classList.remove('show');
-                }
-            });
-
-            // Toggle the clicked item
-            targetCollapse.classList.toggle('show');
-
-            // Update the dropdown title
-            dropdownButton.innerHTML = serviceTitle;
+    window.addEventListener('DOMContentLoaded', (event) => {
+    document.querySelectorAll('.nav-link').forEach(function(link) {
+        link.addEventListener('click', function() {
+            var itemText = this.getElementsByTagName('h3')[0].textContent.trim();
+            document.getElementById('service-title').textContent = itemText;
         });
     });
 });
 </script>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+        const allCollapses = document.querySelectorAll('.accordion-collapse');
 
+        navLinks.forEach(link => {
+            link.addEventListener('click', function () {
+                // Close all accordion items first
+                allCollapses.forEach(collapse => {
+                    collapse.classList.remove('show');
+                });
 
+                // Open the clicked accordion item
+                const targetId = this.getAttribute('href');
+                const targetCollapse = document.querySelector(targetId);
+                if (targetCollapse) {
+                    targetCollapse.classList.add('show');
+                }
+            });
+        });
+        document.querySelectorAll('.nav-link').forEach(function(link) {
+            link.addEventListener('click', function () {
+                var itemText = this.getElementsByTagName('h3')[0].textContent.trim();
+                document.getElementById('service-title').textContent = itemText;
+            });
+        });
 
+    });
+</script>
 
 
 
@@ -394,11 +350,11 @@ document.addEventListener('DOMContentLoaded', function () {
                 </div>
             </div>
             <div class="d-flex flex-column px-4">
-                <div class="d-flex justify-content-start col-12 px-2 ">
-                    <div class="col-12 col-md-9 d-flex justify-content-start justify-content-md-center text-white display-2 py-3"> SHANE MCCORMICK</div>
+                <div class="d-flex justify-content-center col-12 px- px-md-0">
+                    <div class="col-11 col-md-9 d-flex justify-content-start justify-content-md-center text-white display-2 py-3 mx-md-4 px-0"> SHANE MCCORMICK</div>
                 </div>
-                <div class="d-flex justify-content-center">
-                    <div class="col-12 col-md-10  px-md-0 d-flex justify-content-center text-white px-2">
+                <div class="d-flex justify-content-center px-1">
+                    <div class="col-12 col-md-10  px-md-3 d-flex justify-content-center text-white px-3">
                         <p class="editable font-size-2-rem" style="text-align: justify">
                             Shane McCormick has over 20 years of legal experience fighting for diverse clients. As a veteran, he knows the importance of persistence and determination. He brings all these valuable skills to the courtroom to ensure the best possible outcome for every client, every time. A local attorney who knows the system, he has been providing outstanding legal services to Acadiana and the surrounding area since 2002.
                         </p>
@@ -406,7 +362,7 @@ document.addEventListener('DOMContentLoaded', function () {
                 </div>
                 <div class="d-flex col-6 px-md-0 col-md-12 mx-md-4 py-0">
                     <div class="col-12 d-flex justify-content-start px-2 px-md-3 py-3">
-                        <div class="col-12 pb-3 col-md-4 col-lg-7 px-md-5" >
+                        <div class="col-12 pb-3 col-md-4 col-lg-7 px-md-5 mx-3" >
                             <a href="/about" class="d-flex btn btn-primary btn-lg rounded-0 learn-more-white-btn fs-3 fw-semibold justify-content-center py-3" role="button">LEARN MORE</a>
                         </div>
                     </div>
